tests/baselines/reference/parserComputedPropertyName17.errors.txt
parserComputedPropertyName17.ts(1,16): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName17.ts (1 errors) ====
    var v = { set [e](v) { } }
                   ~
!!! error TS2304: Cannot find name 'e'.